# dns-sd-native

./: Cargo.toml  LICENSE  README.md
examples/: register-service.rs
src/: lib.rs  register.rs
src/linux/: dbus.rs  mod.rs
src/macos/: ffi.rs  mod.rs
src/windows/: mod.rs
